Working on adding data_node.

--- a/aws/EsgfCluster.config
+++ b/aws/EsgfCluster.config
@@ -38,5 +38,6 @@ echo "ESGF_VERSION=1.2" >> /etc/environment
 echo "SOLR_DATA=/esgf_data/solr_data" >> /etc/environment
 echo "COG_DATA=/esgf_data/cog_data" >> /etc/environment
 echo "TDS_DATA=/esgf_data/tds_data" >> /etc/environment
+echo "ESGF_DATA_ARCHIVE=/esgf_data/data_archive" >> /etc/environment
 
 --==BOUNDARY==--
