--- a/docker-stack-index-node.yml
+++ b/docker-stack-index-node.yml
@@ -3,10 +3,10 @@
 # ESGF_CONFIG : points to the root ESGF configuration directory
 #       example: export ESGF_CONFIG=/Users/cinquini/ESGF_CONFIG
 # ESGF_HOSTNAME: HostName or IP address for apache httpd front-end server
-#       example: export ESGF_HOSTNAME=my.esgf.node
+#       example: export ESGF_HOSTNAME=my-node.esgf.org
 #       example: export ESGF_HOSTNAME=`docker-machine ip`
 # ESGF_VERSION: version of ESGF/Docker distribution
-#       example: export ESGF_VERSION=1.0
+#       example: export ESGF_VERSION=1.2
 # SOLR_DATA: location of Solr index
 #       example: export SOLR_DATA=/esg/solr-index
 
@@ -26,19 +26,14 @@ services:
       - "8984:8984" 
     volumes:
      # use solr index on Docker volume
-     #- solr_data:/esg/solr-index
+     - solr_data:/esg/solr-index
      # use Solr index on host partition
-     - $SOLR_DATA:/esg/solr-index
+     #- $SOLR_DATA:/esg/solr-index
     networks:
       - default
     deploy:
       mode: replicated
       replicas: 1
-      restart_policy:
-        condition: on-failure
-        delay: 10s
-        max_attempts: 3
-        window: 120s
       placement:
         constraints: [node.labels.esgf_type == solr_node]
 
@@ -92,6 +87,6 @@ services:
 
 # use Docker volumes to store persistent data
 # (which survives when the containers are removed)
-#volumes:
+volumes:
   # contains Solr index data
-  #solr_data:
+  solr_data:
