--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -5,10 +5,10 @@
 # ESGF_CONFIG : points to the root ESGF configuration directory
 #       example: export ESGF_CONFIG=/Users/cinquini/ESGF_CONFIG
 # ESGF_HOSTNAME: HostName or IP address for apache httpd front-end server
-#       example: export ESGF_HOSTNAME=my.esgf.node
+#       example: export ESGF_HOSTNAME=my-node.esgf.org
 #       example: export ESGF_HOSTNAME=`docker-machine ip`
 # ESGF_VERSION: version of ESGF/Docker distribution
-#       example: export ESGF_VERSION=1.0
+#       example: export ESGF_VERSION=1.2
 
 # SOLR_DATA: location of Solr index
 #       example: export SOLR_DATA=/esg/solr-index
@@ -25,9 +25,10 @@
 # Services deployment:
 # - front_node: httpd daemon, cog, and visualizer
 # - db_node: postgres
-# - index_node: esgf-search web application runnning within Tomcat, solr search engine running within Jetty
+# - index_node: esgf-search web application runnning within Tomcat
 # - idp_node: esgf-idp web application running within Tomcat
 # - data_node: TDS and esg-orp applications running within Tomcat
+# - solr_node: Solr search engine running within Jetty
 
 version: '3'
 
@@ -60,13 +61,14 @@ services:
     volumes:
       - cog_install_dir:/usr/local/cog/cog_install
       - cog_venv:/usr/local/cog/venv
-      - $COG_DATA:/usr/local/cog/cog_config
+      #- $COG_DATA:/usr/local/cog/cog_config
+      - cog_data:/usr/local/cog/cog_config
       - $ESGF_CONFIG/httpd/certs/:/etc/certs/
       - $ESGF_CONFIG/httpd/conf/esgf-httpd.conf:/etc/httpd/conf.d/esgf-httpd.conf
       - $ESGF_CONFIG/grid-security/certificates/:/etc/grid-security/certificates/
       - $ESGF_CONFIG/esg/config/:/esg/config/
     #command: $ESGF_HOSTNAME true true # ESGF=true, keep django server runnining on port 8000
-    command: $ESGF_HOSTNAME true false # ESGF=false, django server running on port 8000 = false
+    command: $ESGF_HOSTNAME true false # ESGF=true, django server running on port 8000 = false
     depends_on:
       - esgf-postgres
     networks:
@@ -81,9 +83,6 @@ services:
     deploy:
       mode: replicated
       replicas: 1
-      restart_policy:
-        condition: on-failure
-        max_attempts: 0
       placement:
         constraints: [node.labels.esgf_type == front_node]
 
@@ -94,13 +93,13 @@ services:
       - "8983:8983"
       - "8984:8984"
     volumes:
-      - $SOLR_DATA:/esg/solr-index
+      - solr_data:/esg/solr-index
     networks:
       - default
     deploy:
       replicas: 1
       placement:
-        constraints: [node.labels.esgf_type == index_node]
+        constraints: [node.labels.esgf_type == solr_node]
 
 
   esgf-index-node:
@@ -143,11 +142,11 @@ services:
       - default
       - dbnetwork
     volumes:
-      - $TDS_DATA:/esg/content/thredds
+      - tds_data:/esg/content/thredds
       - $ESGF_CONFIG/esg/config/:/esg/config/
       - $ESGF_CONFIG/webapps/thredds/WEB-INF/web.xml:/usr/local/tomcat/webapps/thredds/WEB-INF/web.xml
       - $ESGF_CONFIG/esg/config/tomcat/esg-truststore.ts:/usr/java/latest/jre/lib/security/jssecacerts
-      - $ESGF_DATA_ARCHIVE:/esg/data_archive
+      #- $ESGF_DATA_ARCHIVE:/esg/data_archive
     environment:
      - ESGF_HOSTNAME
     depends_on:
@@ -160,7 +159,7 @@ services:
     volumes:
       - cog_install_dir:/usr/local/cog/cog_install
       - cog_venv:/usr/local/cog/venv
-      - $COG_DATA:/usr/local/cog/cog_config
+      - cog_data:/usr/local/cog/cog_config
       - $ESGF_CONFIG/httpd/certs/:/etc/certs/
       - $ESGF_CONFIG/httpd/conf/esgf-httpd.conf:/etc/httpd/conf.d/esgf-httpd.conf
       - $ESGF_CONFIG/grid-security/certificates/:/etc/grid-security/certificates/
@@ -209,5 +208,11 @@ volumes:
   cog_install_dir:
   # cog venv directory
   cog_venv:
+  # cog site data
+  cog_data:
   # postgres database
   pg_data:
+  # solr indexes
+  solr_data:
+  # TDS catalogs
+  tds_data:
