--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -193,6 +193,62 @@ services:
       placement:
         constraints: [node.labels.esgf_type == front_node]
 
+  slcs-server:
+    command: ["-sn", "$ESGF_HOSTNAME", "-ds", "rootAdmin", "-sdn", "slcs", "-sdh", "slcs-postgres", "-sdu", "dbsuper", "-udn", "esgcet", "-udh", "esgf-postgres", "-udu", "dbsuper", "--static-url", "https://$ESGF_HOSTNAME/slcs-static/", "--url-prefix", "slcs", "--use-x-forwarded-host"]
+    depends_on:
+      - slcs-postgres
+      - slcs-nginx
+    image: esgfhub/slcs-server:${ESGF_VERSION}
+    networks:
+      - default
+      - dbnetwork
+    ports:
+      - "5000:5000"
+    volumes:
+      - "slcs_static_web:/var/www/static"
+      - "$ESGF_CONFIG/slcs/conf/db/:/usr/local/esgf-slcs-server/conf/db"
+      - "$ESGF_CONFIG/slcs/conf/ca/:/usr/local/esgf-slcs-server/conf/ca"
+    deploy:
+      mode: replicated
+      replicas: 1
+      placement:
+        constraints: [node.labels.esgf_type == idp_node]
+
+  slcs-nginx:
+    expose:
+      - "443"
+      - "80"
+    image: nginx
+    networks:
+      - default
+      - dbnetwork
+    volumes:
+      - "slcs_static_web:/usr/share/nginx/html"
+      - "$ESGF_CONFIG/slcs/conf/nginx/nginx.conf:/etc/nginx/conf.d/default.conf"
+    deploy:
+      mode: replicated
+      replicas: 1
+      placement:
+        constraints: [node.labels.esgf_type == idp_node]
+
+  slcs-postgres:
+    environment:
+      - POSTGRES_PASSWORD=changeit
+      - POSTGRES_USER=dbsuper
+      - POSTGRES_DB=slcs
+      - POSTGRES_INITDB_ARGS=--encoding=UTF-8
+    expose:
+      - "5432"
+    image: postgres
+    networks:
+      - default
+      - dbnetwork
+    deploy:
+      mode: replicated
+      replicas: 1
+      placement:
+        constraints: [node.labels.esgf_type == idp_node]
+
   # useful visualizer container, not really needed
   visualizer:
     image: dockersamples/visualizer:stable
@@ -223,3 +279,5 @@ volumes:
   solr_data:
   # TDS catalogs
   tds_data:
+  # SLCS web pages
+  slcs_static_web:
