--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -193,12 +193,12 @@ services:
       placement:
         constraints: [node.labels.esgf_type == front_node]
 
-  slcs-server:
+  esgf-slcs:
     command: ["-sn", "$ESGF_HOSTNAME", "-ds", "rootAdmin", "-sdn", "slcs", "-sdh", "slcs-postgres", "-sdu", "dbsuper", "-udn", "esgcet", "-udh", "esgf-postgres", "-udu", "dbsuper", "--static-url", "https://$ESGF_HOSTNAME/slcs-static/", "--url-prefix", "slcs", "--use-x-forwarded-host"]
     depends_on:
       - slcs-postgres
       - slcs-nginx
-    image: esgfhub/slcs-server:${ESGF_VERSION}
+    image: esgfhub/esgf-slcs:${ESGF_VERSION}
     networks:
       - default
       - dbnetwork
@@ -215,9 +215,6 @@ services:
         constraints: [node.labels.esgf_type == idp_node]
 
   slcs-nginx:
-    expose:
-      - "443"
-      - "80"
     image: nginx
     networks:
       - default
@@ -237,8 +234,6 @@ services:
       - POSTGRES_USER=dbsuper
       - POSTGRES_DB=slcs
       - POSTGRES_INITDB_ARGS=--encoding=UTF-8
-    expose:
-      - "5432"
     image: postgres
     networks:
       - default
