--- a/solr/conf/supervisord.solr_master_8984.conf
+++ b/solr/conf/supervisord.solr_master_8984.conf
@@ -1,3 +1,7 @@
 [program:master_8984]
 user=solr
-command=%(ENV_SOLR_INSTALL_DIR)s/bin/solr start -f -d %(ENV_SOLR_INSTALL_DIR)s/server -s %(ENV_SOLR_HOME)s/master-8984 -p 8984 -a '-Denable.master=true'
+command=%(ENV_SOLR_INSTALL_DIR)s/bin/solr start -f -d %(ENV_SOLR_INSTALL_DIR)s/server -s %(ENV_SOLR_HOME)s/master-8984 -p 8984 -a '-Denable.master=true' -m 512m
+environment = SOLR_INCLUDE=%(ENV_SOLR_HOME)s/master-8984/solr.in.sh
+stdout_logfile = /dev/stdout
+stdout_logfile_maxbytes = 0
+stdout_capture_maxbytes = 0
