--- a/solr/conf/supervisord.solr_slave_8983.conf
+++ b/solr/conf/supervisord.solr_slave_8983.conf
@@ -1,3 +1,8 @@
 [program:slave_8983]
 user=solr
-command=%(ENV_SOLR_INSTALL_DIR)s/bin/solr start -f -d %(ENV_SOLR_INSTALL_DIR)s/server -s %(ENV_SOLR_HOME)s/slave-8983 -p 8983 -a '-Denable.slave=true -Denable.master=true'
+command=%(ENV_SOLR_INSTALL_DIR)s/bin/solr start -f -d %(ENV_SOLR_INSTALL_DIR)s/server -s %(ENV_SOLR_HOME)s/slave-8983 -p 8983 -a '-Denable.slave=true -Denable.master=true' -m 512m
+environment = SOLR_INCLUDE=%(ENV_SOLR_HOME)s/slave-8983/solr.in.sh
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stdout_capture_maxbytes=0
+redirect_stderr=true
