--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-cayman
 name: Hank Quinlan, Horrible Cop
 markdown: kramdown
-permalink: /:year/:month/:day/:title
+#permalink: /:year/:month/:day/:title
