fix SLCS startup

--- a/slcs/Dockerfile
+++ b/slcs/Dockerfile
@@ -60,6 +60,7 @@ RUN touch $APPLICATION_CONF_DIR/secret_key.txt && \
     
 VOLUME $APPLICATION_HOME/conf/db
 VOLUME $APPLICATION_HOME/conf/ca
+VOLUME $APPLICATION_HOME/conf/ca/trustroots
 
 ENV SLCS_APPLICATION_HOME=$APPLICATION_HOME \
     SLCS_STATIC_ROOT=/var/www/static
