--- a/node-manager/Dockerfile
+++ b/node-manager/Dockerfile
@@ -16,7 +16,10 @@
 # /esg/config/nm.properties 
 # /esg/config/esgf_nodemgr_map.json : periodically updated to reflect nodes status
 
-FROM esgfhub/esgf-node:devel
+ARG ESGF_IMAGES_HUB=esgf
+ARG ESGF_VERSION=devel
+
+FROM $ESGF_IMAGES_HUB/esgf-node:$ESGF_VERSION
 
 MAINTAINER Luca Cinquini <luca.cinquini@jpl.nasa.gov>
 
