implement default values for ESGF_VERSION and ESGF_IMAGES_HUB

--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -7,10 +7,6 @@
 # ESGF_HOSTNAME: HostName or IP address for apache httpd front-end server
 #       example: export ESGF_HOSTNAME=my-node.esgf.org
 #       example: export ESGF_HOSTNAME=`docker-machine ip`
-# ESGF_VERSION: version of ESGF/Docker distribution
-#       example: export ESGF_VERSION=1.2
-# ESGF_IMAGES_HUB: the repository of the esgf components images
-#       example: export ESGF_IMAGES_HUB=esgfhub
 # SOLR_DATA: location of Solr index
 #       example: export SOLR_DATA=/esg/solr-index
 # COG_DATA: location of CoG site data
@@ -22,7 +18,12 @@
 # ESGF_DATA_ARCHIVE: location of science data
 #       example: export ESGF_DATA_ARCHIVE=/esgf/data_archive
 
-#
+# Optional env variables:
+# ESGF_VERSION: version of ESGF/Docker distribution
+#       example: export ESGF_VERSION=latest
+# ESGF_IMAGES_HUB: the repository of the esgf components images
+#       example: export ESGF_IMAGES_HUB=esgfhub
+
 # Services deployment:
 # - front_node: httpd daemon, cog, and visualizer
 # - db_node: postgres
@@ -84,7 +85,7 @@ services:
 
   # ESGF postgres database
   esgf-postgres:
-    image: ${ESGF_IMAGES_HUB}/esgf-postgres:${ESGF_VERSION}
+    image: ${ESGF_IMAGES_HUB-esgfhub}/esgf-postgres:${ESGF_VERSION-latest}
     ports:
       - "5432:5432"
     networks:
@@ -99,7 +100,7 @@ services:
   # CoG
   # data container to hold CoG source code and python virtual environment
   esgf-cog:
-    image: ${ESGF_IMAGES_HUB}/esgf-cog:${ESGF_VERSION}
+    image: ${ESGF_IMAGES_HUB-esgfhub}/esgf-cog:${ESGF_VERSION-latest}
     ports:
       - "8000:8000"
     configs:
@@ -147,7 +148,7 @@ services:
 
 
   esgf-solr:
-    image: ${ESGF_IMAGES_HUB}/esgf-solr:${ESGF_VERSION}
+    image: ${ESGF_IMAGES_HUB-esgfhub}/esgf-solr:${ESGF_VERSION-latest}
     ports:
       - "8983:8983"
       - "8984:8984"
@@ -165,7 +166,7 @@ services:
 
 
   esgf-index-node:
-    image: ${ESGF_IMAGES_HUB}/esgf-index-node:${ESGF_VERSION}
+    image: ${ESGF_IMAGES_HUB-esgfhub}/esgf-index-node:${ESGF_VERSION-latest}
     ports:
       - "8081:8080"
       - "8444:8443"
@@ -184,7 +185,7 @@ services:
         constraints: [node.labels.esgf_index_node == true]
 
   esgf-idp-node:
-    image: ${ESGF_IMAGES_HUB}/esgf-idp-node:${ESGF_VERSION}
+    image: ${ESGF_IMAGES_HUB-esgfhub}/esgf-idp-node:${ESGF_VERSION-latest}
     ports:
       - "8082:8080"
       - "8445:8443"
@@ -204,7 +205,7 @@ services:
         constraints: [node.labels.esgf_idp_node == true]
 
   esgf-data-node:
-    image: ${ESGF_IMAGES_HUB}/esgf-data-node:${ESGF_VERSION}
+    image: ${ESGF_IMAGES_HUB-esgfhub}/esgf-data-node:${ESGF_VERSION-latest}
     ports:
       - "8083:8080"
       - "8446:8443"
@@ -231,7 +232,7 @@ services:
         constraints: [node.labels.esgf_data_node == true]
 
   esgf-httpd:
-    image: ${ESGF_IMAGES_HUB}/esgf-httpd:${ESGF_VERSION}
+    image: ${ESGF_IMAGES_HUB-esgfhub}/esgf-httpd:${ESGF_VERSION-latest}
     entrypoint: /usr/local/bin/docker-entrypoint.sh
     configs:
       - source: httpd_esgf-httpd_conf
@@ -282,7 +283,7 @@ services:
     depends_on:
       - slcs-postgres
       - slcs-nginx
-    image: ${ESGF_IMAGES_HUB}/esgf-slcs:${ESGF_VERSION}
+    image: ${ESGF_IMAGES_HUB-esgfhub}/esgf-slcs:${ESGF_VERSION-latest}
     networks:
       - default
       - dbnetwork
