--- a/data-node/Dockerfile
+++ b/data-node/Dockerfile
@@ -4,7 +4,7 @@
 # o ORP
 # o Dashboard
 
-ARG ESGF_IMAGES_HUB=esgf
+ARG ESGF_IMAGES_HUB=esgfhub
 ARG ESGF_VERSION=devel
 
 FROM $ESGF_IMAGES_HUB/esgf-tomcat:$ESGF_VERSION
