--- a/solr/Dockerfile
+++ b/solr/Dockerfile
@@ -1,6 +1,6 @@
 # ESGF node with Solr engine configured to serve ESGF shards
 
-ARG ESGF_IMAGES_HUB=esgf
+ARG ESGF_IMAGES_HUB=esgfhub
 ARG ESGF_VERSION=devel
 
 FROM $ESGF_IMAGES_HUB/esgf-node:$ESGF_VERSION
