--- a/index-node/Dockerfile
+++ b/index-node/Dockerfile
@@ -1,6 +1,6 @@
 # ESGF index node:  esgf-search application running inside Tomcat
 
-ARG ESGF_IMAGES_HUB=esgf
+ARG ESGF_IMAGES_HUB=esgfhub
 ARG ESGF_VERSION=devel
 
 FROM $ESGF_IMAGES_HUB/esgf-tomcat:$ESGF_VERSION
