--- a/postgres/Dockerfile
+++ b/postgres/Dockerfile
@@ -1,6 +1,6 @@
 # ESGF node with postgres database
 
-ARG ESGF_IMAGES_HUB=esgf
+ARG ESGF_IMAGES_HUB=esgfhub
 ARG ESGF_VERSION=devel
 
 FROM $ESGF_IMAGES_HUB/esgf-node:$ESGF_VERSION
