--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -71,8 +71,8 @@ secrets:
   slcs_onlineca_key:
     file: $ESGF_CONFIG/slcs/conf/ca/onlineca.key 
           ##################### GRID SECRETS ##################
-  grid_certificates:
-    file: $ESGF_CONFIG/archives/grid_security_certs.tar.xz
+#  grid_certificates:
+#    file: $ESGF_CONFIG/archives/grid_security_certs.tar.xz
 services:
 
   # ESGF postgres database
@@ -110,14 +110,14 @@ services:
         target: /etc/certs/hostcert.pkcs12
       - source: httpd_hostkey_pem
         target: /etc/certs/hostkey.pem
-      - source: grid_certificates
-        target: /root/archives/grid_security_certs.tar.xz
+      #- source: grid_certificates
+      #  target: /root/archives/grid_security_certs.tar.xz
     volumes:
       - cog_install_dir:/usr/local/cog/cog_install
       - cog_venv:/usr/local/cog/venv
       - cog_data:/usr/local/cog/cog_config
 
-      #- $ESGF_CONFIG/grid-security/certificates/:/etc/grid-security/certificates/ # TODO: secret
+      - $ESGF_CONFIG/grid-security/certificates/:/etc/grid-security/certificates/ # TODO: secret
 
 
 
