--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -71,8 +71,8 @@ secrets:
   slcs_onlineca_key:
     file: $ESGF_CONFIG/slcs/conf/ca/onlineca.key 
           ##################### GRID SECRETS ##################
-#  grid_certificates:
-#    file: $ESGF_CONFIG/archives/grid_security_certs.tar.xz
+  grid_certificates:
+    file: $ESGF_CONFIG/archives/grid_security_certs.tar.xz
 services:
 
   # ESGF postgres database
@@ -110,17 +110,13 @@ services:
         target: /etc/certs/hostcert.pkcs12
       - source: httpd_hostkey_pem
         target: /etc/certs/hostkey.pem
-      #- source: grid_certificates
-      #  target: /root/archives/grid_security_certs.tar.xz
+      - source: grid_certificates
+        target: /root/archives/grid_security_certs.tar.xz
+        mode:   0400
     volumes:
       - cog_install_dir:/usr/local/cog/cog_install
       - cog_venv:/usr/local/cog/venv
       - cog_data:/usr/local/cog/cog_config
-
-      - $ESGF_CONFIG/grid-security/certificates/:/etc/grid-security/certificates/ # TODO: secret
-
-
-
       - $ESGF_CONFIG/esg/config/:/esg/config/ # TODO: secret&config
     #command: $ESGF_HOSTNAME true true # ESGF=true, keep django server runnining on port 8000
     command: $ESGF_HOSTNAME true false # ESGF=true, django server running on port 8000 = false
@@ -244,11 +240,13 @@ services:
         target: /etc/certs/hostcert.pkcs12
       - source: httpd_hostkey_pem
         target: /etc/certs/hostkey.pem
+      - source: grid_certificates
+        target: /root/archives/grid_security_certs.tar.xz
+        mode:   0400
     volumes:
       - cog_install_dir:/usr/local/cog/cog_install
       - cog_venv:/usr/local/cog/venv
       - cog_data:/usr/local/cog/cog_config
-      - $ESGF_CONFIG/grid-security/certificates/:/etc/grid-security/certificates/ # TODO: secret
       - $ESGF_CONFIG/esg/config/:/esg/config/ # TODO: secret&config
       # - esgf-node-manager
     environment:
