--- a/esgf_config/httpd/conf/esgf-httpd.conf
+++ b/esgf_config/httpd/conf/esgf-httpd.conf
@@ -105,8 +105,8 @@ WSGISocketPrefix run/wsgi
   ProxyPassReverse /slcs-static http://slcs-nginx timeout=600
 
   # proxy requests for esgf-auth resources
-  ProxyPass /esgf-auth http://esgf-data-node:8001 timeout=600
-  ProxyPassReverse /esgf-auth http://esgf-data-node:8001 timeout=600
+  #ProxyPass /esgf-auth http://esgf-data-node:8001 timeout=600
+  #ProxyPassReverse /esgf-auth http://esgf-data-node:8001 timeout=600
 
   # Node Manager
   WSGIDaemonProcess esgfnm python-path=/opt/esgf/virtual/python/lib/python2.7/site-packages:/usr/local/esgf-node-manager/src/python/server user=apache group=apache threads=5
@@ -120,6 +120,29 @@ WSGISocketPrefix run/wsgi
      WSGIProcessGroup esgfnm
      WSGIApplicationGroup %{GLOBAL}
   </Location>
+
+  # ESGF Authentication Relying Party
+  WSGIDaemonProcess esgf_auth python-path=/usr/local/esgf-auth/src/esgf-auth:/usr/local/esgf-auth/venv/lib/python2.7/site-packages
+  WSGIScriptAlias /esgf-auth /usr/local/esgf-auth/src/esgf-auth/esgf_auth/wsgi.py process-group=esgf_auth
+  <Directory /usr/local/esgf-auth/src/esgf-auth/esgf_auth>
+      <Files wsgi.py>
+          # Apache >= 2.4
+          #Require all granted
+          # Apache <= 2.2
+          Order allow,deny
+          Allow from all
+      </Files>
+  </Directory>
+  Alias /esgf-auth/home/static/ /usr/local/esgf-auth/src/esgf-auth/static/
+  <Directory /usr/local/esgf-auth/src/esgf-auth/static>
+      Options -Indexes
+      # Apache >= 2.4
+      #Require all granted
+      # Apache <= 2.2
+      Order allow,deny
+      Allow from all
+      AllowOverride None
+  </Directory>
 
   # CoG
   # note: WSGIPythonEggs must match location created by Dockerfile
