--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,11 +52,11 @@ services:
     expose:
       - "8080"
       - "8443"
-      - "8001"
+    # - "8001"
     ports:
       - "8080:8080"
       - "8443:8443"
-      - "8001:8001"
+    # - "8001:8001"
     networks:
       - default
       - dbnetwork 
@@ -163,10 +163,12 @@ services:
    entrypoint: /usr/local/bin/docker-entrypoint.sh
    volumes:
      - cog_data:/usr/local/cog/cog_config
+     - $ESGF_CONFIG/esgf-auth/db.sqlite3:/tmp/db.sqlite3
    volumes_from:
      - esgf-config
      - esgf-cog
    # - esgf-node-manager
+     - esgf-data-node
    environment:
      - SSL_CERT_DIR=/etc/grid-security/certificates
      - COG_CONFIG_DIR=/usr/local/cog/cog_config
